--- a/Mapa+do+Brasil+SVGa.html
+++ b/Mapa+do+Brasil+SVGa.html
@@ -82,7 +82,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="">
         <div>
 
             <svg version="1.1" id="svg-map" xmlns="http://www.w3.org/2000/svg"
