implementei a funcionalidade de o USER ter o metadado estado, para saber por qual estado esse usario é responsavel, e quando for cadastrar um novo PET, deixa fixo o estado PET q ele cadastrou

--- a/Mapa+do+Brasil+SVGa.html
+++ b/Mapa+do+Brasil+SVGa.html
@@ -18,7 +18,7 @@
                 $("#loading").show(); //icon 
                 //faz requisicao
                 $.ajax({
-                    url: 'http://localhost/projetoGruposPET/wp-json/api/pet?estado='+estado,  //http://localhost:8083
+                    url: 'http://localhost:8083/wp-json/api/pet?estado='+estado,  //http://localhost:8083
                     type: "GET",
                     dataType: "json"
                 }).done(function (response) { //depois da requisicao
